fix: hide table on mobile

--- a/src/pages/Txns/Information/styles.scss
+++ b/src/pages/Txns/Information/styles.scss
@@ -8,4 +8,12 @@
     padding: 0 16px;
     color: var(--color-primary-50);
   }
+
+  .table {
+    display: none;
+
+    @include desktop {
+      display: block;
+    }
+  }
 }
